<resources>
    <string name="app_name">QuitIt</string>

    <!-- this is needed in JAVA CODE -->
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="disease_1">Diabetes</string>
    <string name="disease_2">High BloodPressure</string>
    <string name="disease_3">Heart Problem</string>
    <string name="disease_4">Other</string>
    <string name="disease_5">None</string>
        <string name="email">Email Address</string>
    <string name="contact_number">Contact number</string>

    <string name="name">Name</string>
    <string name="sex">Sex :</string>
    <string name="businessEditTest">Profession :</string>
    <string name="rupees">In Rupees</string>
    <string name="age">Age </string>
    <string name="bussiness">Profession :</string>
    <string name="marital_status">Marital Status :</string>
    <string name="fractionSpent">Fraction of salary spent :</string>
    <string name="future_prompt">Choose One :</string>
    <string name="address">Address</string>


    <string name="chewing_history">Chewing History</string>
    <string name="chewConsumption">Chews/day :</string>
    <string name="chewing_history_time">How long have you been chewing?(Years, months)</string>
    <string name="often_chewing_text_view">How many times do you chew in a day?</string>
    <string name="cost_of_one_packet">Average cost of one packet</string>
    <string name="consumption_tumbakoo">Packets per day :</string>
    <string name="packets_one_day">Packets in one day</string>

    <string name="smoking_history">Smoking History</string>
    <string name="smokeConsumption">Smokes/day :</string>
    <string name="cigarettes_one_day">Cigarettes Smoked in a Day</string>
    <string name="smoking_history_time">How long have you been smoking?</string>
    <string name="often_smoking_text_view">How many times do you smoke in a day?</string>
    <string name="cost_of_one_ciggrete">What is the cost of one ciggerete?</string>


    <string name="smoker">Ciggerates/Bidi/Hukkah</string>
    <string name="chewer">Tambakoo/Gutka/Pan</string>
    <string name="print">Print Report</string>

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a patient</string>

    <string name="update_patient">Update</string>

    <string name="delete_patient">Delete</string>

    <string name="view_all">View Details</string>
    <string name="profession">Profession</string>
    <string name="monthly_salary">Monthly Salary</string>
    <string name="average_cost_of_each_ciggerate">Average cost of each ciggerate </string>
    <string name="how_many_times_do_you_smoke_in_a_day">How many times do you smoke in a day?</string>
    <string name="search_hint">Patient\'s Name</string>
    <string name="image_msg_report_activity">This is what you may look like after too much of consumption</string>
    <string name="title_activity_check_patient_registration">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="dialogueText">Daily Updates</string>
    <string name="save">Save</string>
    <string name="dialogue_hint1">Todays Cigarette Intake</string>
    <string name="dialogue_hint2">Todays Tobacco Intake</string>
    <string name="what_do_you_consume">What do you consume?</string>
    <string name="how_long_have_you_been_smoking">How long have you been smoking?</string>
    <string name="years">Years</string>
    <string name="months">Months</string>
    <string name="in_rupees">In Rupees</string>
    <string name="tobacco_chewed_in_a_day">Tobacco chewed in a day?</string>
    <string name="uploading_your_response">Uploading your response.</string>
    <string name="any_medical_history">Any Medical History :</string>
    <string name="add_an_image_of_your_face">Add an image of Your Face.</string>
    <string name="sex_colon">Sex :</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other_sex">Other</string>
    <string name="married">Married</string>
    <string name="unmarried">Unmarried</string>
    <string name="soon_to_be_married">Soon to be married</string>
    <string name="fill_more">Fill More</string>
    <string name="do_you_consume_tobacco_within_30_mins_after_waking_up">Do you consume Tobacco within 30 mins after waking up?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="any_one_in_your_family_consumes_tobacco">Any one in your family consumes Tobacco?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="how_did_you_start_this_habbit">How did you start this habbit?</string>
    <string name="with_friends">With Friends</string>
    <string name="for_hunger">For Hunger</string>
    <string name="social_issues">Social Issues</string>
    <string name="other">Other</string>
    <string name="any_other_habit">Any Other Habit?</string>
    <string name="drugs">Drugs</string>
    <string name="alchohol">Alchohol</string>
    <string name="aware_of_harms_from_tobacco">Aware of harms from Tobacco?</string>
    <string name="which_of_the_following_diseases_are_you_aware_of_being_associated_with_tobacco_consumption">Which of the following diseases are you aware of being associated with Tobacco Consumption?</string>
    <string name="cancer">Cancer</string>
    <string name="lung_problems">Lung Problems</string>
    <string name="breathing_problems">Breathing Problems</string>
    <string name="tb">TB</string>
    <string name="teeth_stains">Teeth Stains</string>
    <string name="bad_breath_smelly_mouth">Bad breath/ Smelly mouth</string>
    <string name="diabetes">Diabetes</string>
    <string name="heart_related_problems">Heart Related Problems</string>
    <string name="gum_problems">Gum Problems</string>
    <string name="problems_related_to_reproduction">Problems related to Reproduction</string>
    <string name="want_to_quit_tobacco">Want to quit Tobacco?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="any_particular_reason_behind_quitting">Any Particular Reason behind quitting?</string>
    <string name="health">Health</string>
    <string name="for_family">For Family</string>
    <string name="because_its_a_money_waste">Because its a money waste</string>
    <string name="ever_tried_quitting_before">Ever tried quitting before?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="when_do_you_usually_have_a_craving">When do you usually have a craving?</string>


</resources>