<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quitit.ReportActivity"
    android:orientation="vertical"
    >

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nameView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="8dp"
                    android:textSize="28sp"
                    tools:text="Arunesh Kumar"
                    android:textColor="@color/colorPrimaryEQ"
                    android:fontFamily="sans-serif-medium" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/ageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:textSize = "16sp"
                        tools:text="40"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize = "16sp"
                        android:text=" , "/>
                    <TextView
                        android:id="@+id/sexView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize = "16sp"
                        tools:text="Male"
                        />
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin = "12dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/bussiness"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/bussinessView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="24dp"
                    android:textSize="16sp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/marital_status"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/marrital_statusView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="24dp"
                    android:textSize="16sp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/smokeConsumption"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/smokeConsumptionView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="24dp"
                    android:textSize="16sp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/chewConsumption"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/chewConsumptionView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="24dp"
                    android:textSize="16sp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/fractionSpent"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fractionSpentView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="24dp"
                    android:textSize="16sp" />
            </LinearLayout>
            <TextView
                android:id="@+id/personalisedMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textStyle="italic"
                android:text = "This is where the Msssage Shall appear "
                android:layout_margin="16dp"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id = "@+id/print_report_button"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:gravity="center"
                    android:fontFamily="sans-serif"
                    android:text="@string/print"
                    android:padding="10dp"
                    android:textSize="18sp"
                    android:textAllCaps="false"
                    android:background="@color/colorPrimaryEQ"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    />

                <Button
                    android:id="@+id/send_msg_button"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="sans-serif"
                    android:layout_alignParentStart="true"
                    android:padding="10dp"
                    android:textSize="18sp"
                    android:textAllCaps="false"
                    android:background="@color/colorPrimaryEQ"
                    android:textColor="@android:color/white"
                    android:text="Send Message" />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>